# dev_greenova

./: .bandit  .banditrc  .editorconfig  .env.example  .env.vault  .envrc  .gitignore  .pre-commit-config.yaml  .pylintrc  .pylintrc-django  .pyrightconfig.json  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  conftest.py  constraints.txt  isort.cfg  issue.md  mypy.ini  package.json  pyproject.toml  pytest.ini  pythonstartup  requirements.txt  setup.cfg  setup.py  stylelint.config.js
.devcontainer/: .dockerignore  Dockerfile  README.md  devcontainer.json  docker-compose.yml  post_start.sh  run.sh
.github/: .copilot-codeGeneration-instructions.md  .copilot-review-instructions.md  .copilot-test-instructions.md  copilot-instructions.md  dependabot.yml
.github/prompts/: code-review.prompt.md  github-issue.prompt.md  merge-strategy.prompt.md
.github/workflows/: codeql.yml  pylint.yml  super-linter.yml  tasks.json
docs/: ARCHITECTURE.md  DEPLOYMENT.md  SCHEMA.md  TESTING.md  TODO.md  chatdata.md
docs/git/: git-repository-management.md
docs/learning/: docker_test_activity.md
docs/project/: container_environment.md  front_end_interactivity.md  ui_design_and_styling.md
docs/resources/: htmx.md  keep-a-changelog.md
docs/templates/: bug-report-template.md  github-issue-template.md  pull-request-template.md
greenova/: db.sqlite3-shm  db.sqlite3-wal  dummy_data.csv  manage.py
greenova/authentication/: apps.py  test_authentication.py  urls.py  views.py
greenova/chatbot/: _pb2.py  chatbot_pb2.py  chatdata_pb2.py  compile_proto.py  create_input.py  forms.py  middleware.py  models.py  services.py  test_chatbot.py  views.py
greenova/company/: admin.py  forms.py  middleware.py  mixins.py  models.py  test_company.py  urls.py  views.py
greenova/core/: apps.py  commons.py  constants.py  jinja2.py  mixins.py  signals.py  test_core.py  urls.py  views.py
greenova/dashboard/: extensions.py  test_dashboard.py  urls.py  views.py
greenova/feedback/: admin.py  compile_proto.py  extensions.py  forms.py  proto_utils.py  test_feedback.py  urls.py  views.py
greenova/greenova/: settings.py  test_greenova.py  urls.py  wsgi.py
greenova/landing/: test_landing.py
greenova/mechanisms/: figures.py  models.py  test_mechanisms.py  views.py
greenova/obligations/: admin.py  forms.py  models.py  (+3 more)
requirements/: base.txt  dev.txt
scripts/: cleanup_git_conflict_markers.sh  fix_hyperscript.py  fix_hyperscript_dump.py  pip_upgrade_no_deps.sh
(+115 files in other folders)
