[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.autopep8]
max_line_length = 88
ignore = ["E501", "E302", "E305"]
in-place = true
recursive = true
aggressive = 3
single_quotes = true

[tool.djlint]
profile = "jinja"
indent = 2
use_gitignore = true
format_css = false
format_js = false
ignore = "H014,H015"
