[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.autopep8]
max_line_length = 88
ignore = ["E501", "E302", "E305"]
in-place = true
recursive = true
aggressive = 3
single_quotes = true

[tool.djlint]
profile = "jinja"
indent = 2
max_line_length = 88
use_gitignore = true
format_css = false
format_js = false
ignore = "H014,H015"
include = "**/*.html,**/*.jinja,**/*.jinja2,**/*.djhtml"
extension = "jinja,django-jinja,html,django-html"
blank_line_after_tag = "load,extends,include"
blank_line_before_tag = "block"
preserve_blank_lines = true
